2012-11-22
* fix error in bat/bruteforce.py: actually use the checksum instead of the
size, which could have lead to misclassifications

2012-11-21
* fix errors in database creation script, add preliminary blacklisting
capabilities.

2012-11-16
* rewrite leafscans to return a dictionary instead of a list of dictionaries

2012-11-13
* support "noscan" and "scanonly" for postrunscans, for as far as applicable

2012-11-12
* fix config initialization bug in batgui
* add extra sanity checks in XZ unpacking based on 'streamflags'
* significantly rework XZ unpacking to make it more sane
* introduce 'scanonly' to filter out scans. This is complementary to 'noscan'

2012-11-11
* allow multiple values in 'storetype'
* display licensing information in GUI
* XZ unpacking cleanups
* condense filenames in generateuniquehtml.py for easier display in GUI
* assume .txx files are C files

2012-11-10
* stop processing XZ files as soon as all possible XZ files have been extracted.
* put extracted XZ files in blacklist
* use xz -l instead of xz -t for faster testing.

2012-11-04
* also store line numbers for function names

2012-10-31
* introduce new configuration parameters for postrunscans to store results in
a more generic way. Rewrite data dumping routine to take advantage of this.

2012-10-30
* parallellise more in database creation script
* add some more granularity to scanning in parallel

2012-10-17
* parallellise more in database creation script

2012-10-14
* fix multiprocessing code in database creation
* add script to mass rename packages in the database

2012-10-13
* make better use of multiprocessing in database creation

2012-10-12
* split creation of images into a generic part and a part for ranking
* add simple script to verify integrity of database

2012-10-03
* clear old results when opening new results file

2012-09-24
* add extra sanity check to prevent ext2 unpacking from barfing after
identifying non-ext2 images as ext2

2012-06-27