@@ -7,6 +7,7 @@ multiprocessing = no
 module = bat.simpleprettyprint
 #module = bat.ppknowledgebase
 output = prettyprintresxml
+outputlite = no
 
 ############################
 ### viewer configuration ###
